trunk/Archive2/03/213b9330d5a7a0/output
main.cpp:6:51: error: 'bool operator==(const Location*, const Location*)' must have an argument of class or enumerated type
 bool operator==(Location const *, Location const *);
                                                   ^
