trunk/Archive2/03/213b9330d5a7a0/main.cpp
#include <iostream>
#include <functional>

struct Location{};

bool operator==(Location const *, Location const *);

int main()
{
}